--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    <jacoco.version>0.8.10</jacoco.version>
+    <sonar.organization>kesslersoftware</sonar.organization>
+    <sonar.host.url>http://localhost:9000</sonar.host.url>
     </properties>
     <dependencies>
         <!-- AWS Lambda -->
@@ -70,7 +72,7 @@
         <dependency>
             <groupId>com.boycottpro</groupId>
             <artifactId>boycottpro-common-models</artifactId>
-            <version>1.0.12</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
     <repositories>
